test_suite/alan-2022-examples/failing/002720_mutation.alan
source N1FO begin Sh := 165 z := 55 end
